After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676361 - [cdparanoia] doesn't reset to default/max read speed
[cdparanoia] doesn't reset to default/max read speed
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-19 08:38 UTC by Jonathan Matthew
Modified: 2012-05-24 11:40 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jonathan Matthew 2012-05-19 08:38:26 UTC
Looking into why CD ripping is sometimes slow in rhythmbox, I noticed that once a track has been played (which causes rb to set the read speed to 1), ripping would proceed at roughly playback speed.

This appears to be happening because cdparanoiasrc only sets the speed if the read-speed property value is not -1 (and it treats 0 as -1).  The cdparanoia call that sets the speed (cdda_speed_set) works by calling an ioctl or issuing a scsi command to the device, so creating a new cdparanoiasrc instance or closing and reopening the device won't reset it, meaning that the read speed setting for playback still applies.

Is there a reason it doesn't set the speed when the property value is -1?

I'm currently hacking around this by setting read-speed to 65535 (the field in the scsi command is 16 bits) for CD ripping, which seems to be helping.
Comment 1 Wim Taymans 2012-05-24 11:40:37 UTC
commit 897a1e93b7e224e0adea18d97d116cfc9fe360f8
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Thu May 24 13:28:33 2012 +0200

    cdparanoia: always set the read_speed
    
    Always set the read speed to the configured value. Clarify that 0 or -1
    speed means full speed.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=676361