ext/cdparanoia/gstcdparanoiasrc.c
@@ -143,8 +143,9 @@ gst_cd_paranoia_src_class_init (GstCdParanoiaSrcClass * klass)
           G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS));
   g_object_class_install_property (G_OBJECT_CLASS (klass), PROP_READ_SPEED,
       g_param_spec_int ("read-speed", "Read speed",
-          "Read from device at specified speed", -1, G_MAXINT,
-          DEFAULT_READ_SPEED, G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS));
+          "Read from device at specified speed (-1 and 0 = full speed)",
+          -1, G_MAXINT, DEFAULT_READ_SPEED,
+          G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS));
   g_object_class_install_property (G_OBJECT_CLASS (klass), PROP_PARANOIA_MODE,
       g_param_spec_flags ("paranoia-mode", "Paranoia mode",
           "Type of checking to perform", GST_TYPE_CD_PARANOIA_MODE,
@@ -228,9 +229,8 @@ gst_cd_paranoia_src_open (GstAudioCdSrc * audiocdsrc, const gchar * device)
   if (cdda_open (src->d))
     goto open_failed;
 
-  if (src->read_speed != -1) {
-    cdda_speed_set (src->d, src->read_speed);
-  }
+  GST_INFO_OBJECT (src, "set read speed to %d", src->read_speed);
+  cdda_speed_set (src->d, src->read_speed);
 
   for (i = 1; i < src->d->tracks + 1; i++) {
     GstAudioCdSrcTrack track = { 0, };
